[package]
name = "thumbcloud"
version = "0.0.3"
authors = ["flofriday <flohacksfriday@gmail.com>"]
description = "thumbcloud is a drop-in software replacement for your USB thumbdrive."
readme = "README.md"
repository = "https://github.com/flofriday/thumbcloud.git"
license = "MIT"

[dependencies]
actix = "0.5"
actix-web = "0.6"
clap = "2.32"
futures = "0.1.0"
pretty-bytes = "0.2.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
