[package]
name = "thumbcloud"
version = "0.0.4"
authors = ["flofriday <flohacksfriday@gmail.com>"]
description = "Thumbcloud is a file-sharing server to replace your USB thumbdrive"
readme = "README.md"
repository = "https://github.com/flofriday/thumbcloud.git"
homepage = "https://github.com/flofriday/thumbcloud"
license = "MIT"

[dependencies]
actix = "0.7"
actix-web = {version = "0.7", default-features = false, features = ["brotli", "flate2-c"]} #Exclude session feature
askama = "0.7"
clap = "2.32"
futures = "0.1.0"
htmlescape = "0.3"
machine-ip = "0.2"
open = "*"
pretty-bytes = "0.2.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"


[build-dependencies]
askama = "0.7"
